========================================

Changed:
- SnakeTail updated to version 1.9.7

Fixed:
- CcminerVerusGpu-v3.8 not generating any miner objects
- CryptoDredge-v0.26.0.ps1 not generating any miner objects
- NBMiner-v37.1 not generating any miner objects (regression from 3.9.9.37)
- TTMiner-v5.0.3 not generating any miner objects (regression from 3.9.9.37)

Improvement:
- Web GUI / Balances summary: Improve 1hr / 24hr / 7day avg. earnings prediction

Miner updates:
- TeamRed-v0.8.2
- Trex-v0.20.1


Changelog NemosMiner 3.9.9.37 21.04.2021
========================================

Changed:
- Remove Blazepool (seems to be dead)

Fixed:
- Error when prerequisites were not met

Improved:
- CPU miners: Optimize algorithm warmup times
- Web GUI / Config editor: miner reformatting, added more info to tool tooltips


Changelog NemosMiner 3.9.9.36 19.04.2021
========================================

Fixes:
- JayddeeCpu-v3.16.2: Fix download link
- MiningPoolHub balances: filter 0 valued currencies

Miner updates:
- GMiner-v2.53
- NanoMiner-v3.3.4 (CUDA11 version)


Changelog NemosMiner 3.9.9.35 17.04.2021
========================================

Fixed:
- Web GUI / Running Miners: 0.00000 earnings until first manual page refresh

Miner updates:
- GMiner-v2.52
- JayddeeCpu-v3.16.2
- lolMiner-v1.26
- RplantCpu-v5.0.21
- SRBMinerMulti-v0.7.3
- Trex-v0.20.1


Changelog NemosMiner 3.9.9.34 13.04.2021
========================================

Changed:
- Renamed config item 'PricePenaltyfactor' to 'EarningsAdjustmentFactor'

Fixed:
- NLpool: (Brains) returned data from BlazePool (wrong URL in .\Brains\NLPool\BrainConfig.xml)
- NLPool: Minimum payout is 0.002 BTC (.\Includes\PoolData.json)
- Web GUI / Earnings Chart: daily earnings ignored daylight saving time

Improved:
- Core: Print message if no response from pool
- Web GUI / Balances summary: Add tooltips
- Web GUI / Config editor: Add EarningsAdjustmentFactor config item

Miner updates:
- GMiner-v2.51
- NanoMiner-v3.3.4
